@@ -76,7 +76,7 @@
  If you want to install gPodder from source, you have to 
  get the following packages:
  
-   apt-get install help2man python-dev intltool
+   apt-get install help2man python-dev intltool imagemagick
 
   Debian developers should install these additional packages:
 
