@@ -13,6 +13,7 @@
   <property name="default_height">450</property>
   <property name="resizable">True</property>
   <property name="destroy_with_parent">False</property>
+  <property name="icon">gpodder-48x48.png</property>
   <property name="decorated">True</property>
   <property name="skip_taskbar_hint">False</property>
   <property name="skip_pager_hint">False</property>
@@ -41,7 +42,7 @@
 	      <property name="use_underline">True</property>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image383">
+		<widget class="GtkImage" id="image613">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-cdrom</property>
 		  <property name="icon_size">1</property>
@@ -63,7 +64,7 @@
 		      <signal name="activate" handler="on_itemUpdate_activate" last_modification_time="Sat, 29 Oct 2005 11:28:10 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image384">
+			<widget class="GtkImage" id="image614">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-refresh</property>
 			  <property name="icon_size">1</property>
@@ -90,7 +91,7 @@
 		      <signal name="activate" handler="on_sync_to_ipod_activate" last_modification_time="Wed, 05 Apr 2006 21:49:38 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image385">
+			<widget class="GtkImage" id="image615">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-save</property>
 			  <property name="icon_size">1</property>
@@ -111,7 +112,7 @@
 		      <signal name="activate" handler="on_cleanup_ipod_activate" last_modification_time="Wed, 05 Apr 2006 22:14:51 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image386">
+			<widget class="GtkImage" id="image616">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-delete</property>
 			  <property name="icon_size">1</property>
@@ -138,7 +139,7 @@
 		      <signal name="activate" handler="on_itemPreferences_activate" last_modification_time="Sat, 29 Oct 2005 11:29:01 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image387">
+			<widget class="GtkImage" id="image617">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-preferences</property>
 			  <property name="icon_size">1</property>
@@ -165,7 +166,7 @@
 		      <signal name="activate" handler="close_gpodder" last_modification_time="Sat, 29 Oct 2005 11:54:31 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image388">
+			<widget class="GtkImage" id="image618">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-quit</property>
 			  <property name="icon_size">1</property>
@@ -189,7 +190,7 @@
 	      <property name="use_underline">True</property>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image389">
+		<widget class="GtkImage" id="image619">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-justify-left</property>
 		  <property name="icon_size">1</property>
@@ -211,7 +212,7 @@
 		      <signal name="activate" handler="on_itemAddChannel_activate" last_modification_time="Sat, 29 Oct 2005 11:33:59 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image390">
+			<widget class="GtkImage" id="image620">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-open</property>
 			  <property name="icon_size">1</property>
@@ -232,7 +233,7 @@
 		      <signal name="activate" handler="on_itemEditChannel_activate" last_modification_time="Sat, 29 Oct 2005 11:34:38 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image391">
+			<widget class="GtkImage" id="image621">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-edit</property>
 			  <property name="icon_size">1</property>
@@ -253,7 +254,7 @@
 		      <signal name="activate" handler="on_itemRemoveChannel_activate" last_modification_time="Sat, 29 Oct 2005 11:35:16 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image392">
+			<widget class="GtkImage" id="image622">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-delete</property>
 			  <property name="icon_size">1</property>
@@ -280,7 +281,7 @@
 		      <signal name="activate" handler="on_itemExportChannels_activate" last_modification_time="Sat, 29 Oct 2005 11:37:45 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image393">
+			<widget class="GtkImage" id="image623">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-save-as</property>
 			  <property name="icon_size">1</property>
@@ -301,7 +302,7 @@
 		      <signal name="activate" handler="on_itemImportChannels_activate" last_modification_time="Tue, 13 Jun 2006 19:39:42 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image394">
+			<widget class="GtkImage" id="image624">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-redo</property>
 			  <property name="icon_size">1</property>
@@ -325,7 +326,7 @@
 	      <property name="use_underline">True</property>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image395">
+		<widget class="GtkImage" id="image625">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-help</property>
 		  <property name="icon_size">1</property>
@@ -340,6 +341,81 @@
 		<widget class="GtkMenu" id="menuHelp_menu">
 
 		  <child>
+		    <widget class="GtkImageMenuItem" id="homepage">
+		      <property name="visible">True</property>
+		      <property name="label" translatable="yes">gPodder website</property>
+		      <property name="use_underline">True</property>
+		      <signal name="activate" handler="on_homepage_activate" last_modification_time="Mon, 04 Dec 2006 12:08:55 GMT"/>
+
+		      <child internal-child="image">
+			<widget class="GtkImage" id="image626">
+			  <property name="visible">True</property>
+			  <property name="stock">gtk-home</property>
+			  <property name="icon_size">1</property>
+			  <property name="xalign">0.5</property>
+			  <property name="yalign">0.5</property>
+			  <property name="xpad">0</property>
+			  <property name="ypad">0</property>
+			</widget>
+		      </child>
+		    </widget>
+		  </child>
+
+		  <child>
+		    <widget class="GtkSeparatorMenuItem" id="separator3">
+		      <property name="visible">True</property>
+		    </widget>
+		  </child>
+
+		  <child>
+		    <widget class="GtkImageMenuItem" id="wishlist">
+		      <property name="visible">True</property>
+		      <property name="label" translatable="yes">Author's wishlist</property>
+		      <property name="use_underline">True</property>
+		      <signal name="activate" handler="on_wishlist_activate" last_modification_time="Mon, 04 Dec 2006 12:06:32 GMT"/>
+
+		      <child internal-child="image">
+			<widget class="GtkImage" id="image627">
+			  <property name="visible">True</property>
+			  <property name="stock">gtk-edit</property>
+			  <property name="icon_size">1</property>
+			  <property name="xalign">0.5</property>
+			  <property name="yalign">0.5</property>
+			  <property name="xpad">0</property>
+			  <property name="ypad">0</property>
+			</widget>
+		      </child>
+		    </widget>
+		  </child>
+
+		  <child>
+		    <widget class="GtkImageMenuItem" id="mailinglist">
+		      <property name="visible">True</property>
+		      <property name="label" translatable="yes">gPodder mailing list</property>
+		      <property name="use_underline">True</property>
+		      <signal name="activate" handler="on_mailinglist_activate" last_modification_time="Mon, 04 Dec 2006 12:12:24 GMT"/>
+
+		      <child internal-child="image">
+			<widget class="GtkImage" id="image628">
+			  <property name="visible">True</property>
+			  <property name="stock">gtk-find</property>
+			  <property name="icon_size">1</property>
+			  <property name="xalign">0.5</property>
+			  <property name="yalign">0.5</property>
+			  <property name="xpad">0</property>
+			  <property name="ypad">0</property>
+			</widget>
+		      </child>
+		    </widget>
+		  </child>
+
+		  <child>
+		    <widget class="GtkSeparatorMenuItem" id="separator1">
+		      <property name="visible">True</property>
+		    </widget>
+		  </child>
+
+		  <child>
 		    <widget class="GtkImageMenuItem" id="itemAbout">
 		      <property name="visible">True</property>
 		      <property name="label" translatable="yes">_About gPodder...</property>
@@ -347,7 +423,7 @@
 		      <signal name="activate" handler="on_itemAbout_activate" last_modification_time="Sat, 29 Oct 2005 11:40:19 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image396">
+			<widget class="GtkImage" id="image629">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-about</property>
 			  <property name="icon_size">1</property>
