@@ -38,15 +38,17 @@ for l in languages:
 
 # files to install
 inst_manpages = glob.glob( 'doc/man/*.1')
-inst_images   = [ 'data/gpodder.png' ] + glob.glob('data/artwork/*')
+inst_images   = glob.glob('data/artwork/*')
+inst_icons    = [ 'data/gpodder.png' ] + glob.glob('data/gpodder-??x??.png')
 inst_share    = [ 'data/gpodder.glade' ]
-inst_icons    = [ 'data/gpodder.desktop' ]
+inst_desktop  = [ 'data/gpodder.desktop' ]
 
 data_files = [
   ('share/man/man1',       inst_manpages),
   ('share/gpodder/images', inst_images),
   ('share/gpodder',        inst_share),
-  ('share/applications',   inst_icons),
+  ('share/applications',   inst_desktop),
+  ('share/pixmaps',        inst_icons),
 ]
 
 setup(
